# Cuma_Project_Client

./: .travis.yml  CMakeLists.txt  Cuma_Frame.cpp  Cuma_Frame.hpp  README.md
Cuma_Client/: C_Log.hpp  Cli_Sck.cpp  Cli_Sck.hpp  Cuma_client.cpp  Cuma_client.hpp  Error_Binary.hpp  main.cpp
Cuma_Client.xcodeproj/: project.pbxproj
Cuma_Client.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Cuma_Client.xcodeproj/xcuserdata/ace.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
Cuma_Client.xcodeproj/xcuserdata/ace.xcuserdatad/xcschemes/: Cuma_Client.xcscheme  xcschememanagement.plist
